[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI/SyncSliderWithAudioBusVolume.gd" type="Script" id=1]
[ext_resource path="res://UI/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/PressStart2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI/PauseMenu.gd" type="Script" id=4]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float blur : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur * 2.0);
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/blur = 0.0

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "Pause"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/blur")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/ResumeButton")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/blur")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Unpause"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/blur")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 120.0
margin_top = 24.0
margin_right = 360.0
margin_bottom = 245.0
rect_min_size = Vector2( 240, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 217.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 16.0
text = "Paused"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 17.0
margin_right = 232.0
margin_bottom = 21.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 232.0
margin_bottom = 130.0
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 232.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 232.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="FullscreenButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 232.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Toggle Fullscreen"
clip_text = true

[node name="MenuButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 232.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 131.0
margin_right = 232.0
margin_bottom = 135.0

[node name="MasterVolLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 232.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Master Volume"
align = 1

[node name="MasterVol" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 232.0
margin_bottom = 161.0

[node name="High" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MasterVol"]
margin_top = 4.0
margin_right = 32.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "High"
align = 1

[node name="MasterVolSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/MasterVol"]
margin_left = 36.0
margin_right = 204.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 0.0
step = 0.1
value = -0.5
script = ExtResource( 1 )

[node name="Low" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MasterVol"]
margin_left = 208.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Low"
align = 1

[node name="MusicVolLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 232.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
text = "Music Volume"
align = 1

[node name="MusicVol" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 232.0
margin_bottom = 187.0

[node name="High" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MusicVol"]
margin_top = 4.0
margin_right = 32.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "High"
align = 1

[node name="MusicVolSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/MusicVol"]
margin_left = 36.0
margin_right = 204.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 0.0
step = 0.1
value = -1.0
script = ExtResource( 1 )
audio_bus = "Music"

[node name="Low" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MusicVol"]
margin_left = 208.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Low"
align = 1

[node name="SFXVolLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 232.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 1 )
text = "Sound Effect Volume"
align = 1

[node name="SFXVol" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 232.0
margin_bottom = 213.0

[node name="High" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/SFXVol"]
margin_top = 4.0
margin_right = 32.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "High"
align = 1

[node name="SFXVolSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/SFXVol"]
margin_left = 36.0
margin_right = 204.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 0.0
step = 0.1
value = -1.0
script = ExtResource( 1 )
audio_bus = "SFX"

[node name="Low" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/SFXVol"]
margin_left = 208.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Low"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Pause = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Unpause = SubResource( 6 )

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/ResumeButton" to="." method="unpause"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/MasterVol/MasterVolSlider" to="CenterContainer/PanelContainer/VBoxContainer/MasterVol/MasterVolSlider" method="update_volume"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/MusicVol/MusicVolSlider" to="CenterContainer/PanelContainer/VBoxContainer/MusicVol/MusicVolSlider" method="update_volume"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/VBoxContainer/SFXVol/SFXVolSlider" to="CenterContainer/PanelContainer/VBoxContainer/SFXVol/SFXVolSlider" method="update_volume"]
